fixing flexbox gap, and smooth scrolling using js

--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,9 @@ body {
   /* Only works if there is nothing absolutely positioned
   in relation to body */
   overflow-x: hidden;
+
+  /* does not work in safari */
+  /* scroll-behavior: smooth; */
 }
 
 /* ------------ */
@@ -97,6 +100,24 @@ body {
 
 .icon-mobile-nav[name="close-outline"] {
   display: none;
+}
+
+/* STICKY NAVIGATION */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.97);
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
 }
 
 /* ------------ */
@@ -555,9 +576,11 @@ body {
 }
 
 .cta-img-box {
-  background-image: linear-gradient(to right bottom,
+  background-image: linear-gradient(
+      to right bottom,
       rgba(235, 151, 78, 0.35),
-      rgba(230, 125, 34, 0.35)),
+      rgba(230, 125, 34, 0.35)
+    ),
     url("../img/eating.jpg");
   background-size: cover;
   background-position: center;
